# GPU-memory-access-visualization

./: .gitignore  CMakeLists.txt  README.md
examples/basic/: CMakeLists.txt  annotated.cu  normal.cu  normal_original.cu  random2dMatrix.cu  random2dMatrix_original.cu  reduce.cu  reduce_original.cu
html/: FEATURES.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  template.json  tsconfig.json  tsconfig.node.json  vite.config.ts
html/data/: basic.json  random2DMatrix_faulty.json
html/src/: App.svelte  app.pcss  cubehelix.d.ts  theme.pcss
html/src/components/: InspectDrawer.svelte  Layout.svelte  MemoryAccessInfo.svelte  MemoryRegionBlock.svelte  ModalColorSelection.svelte  ShowGenericInformation.svelte  SideBar.svelte  VisualizeMemoryRegion.svelte
html/src/lib/: loadDummyData.ts  stores.ts  types.ts
html/tools/: postBuild.ts
include/: cuda_mav.cuh
src/: cuda_mav.cu
templates/: basic_template.html
